--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   latlong2: ^0.9.1
   location: ^7.0.1
   permission_handler: ^11.3.1
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_lints: ^4.0.0
@@ -42,3 +43,6 @@ flutter:
 
   assets:
     - assets/
+    - assets/img/
+    - assets/agencies/
+    - assets/json/
