--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 # consider running `flutter pub upgrade --major-versions`. Alternatively,
 dependencies:
   bloc: ^9.0.0
+  carousel_slider: ^5.0.0
   cupertino_icons: ^1.0.8
   curved_navigation_bar: ^1.0.6
   dio: ^5.8.0+1
@@ -44,5 +45,7 @@ flutter:
   assets:
     - assets/
     - assets/img/
+    - assets/banner/
+    - assets/icons/
     - assets/agencies/
     - assets/json/
